--- a/frontend/src/main/web/src/index.html
+++ b/frontend/src/main/web/src/index.html
@@ -1,14 +1,13 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>NpApp</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<html lang="pt_Br">
+    <head>
+        <meta charset="utf-8">
+        <title>Backend</title>
+        <base href="/">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+    </head>
 <body>
-  <app-root></app-root>
+    <app-root></app-root>
 </body>
 </html>
